--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This is a new repo.</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, earum.</p>
 </body>
 </html>
